--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ footer {
     width: 20px;
 }
 
-.section a:hover {
+.sosmed-section a:hover {
     color: rgb(114, 159, 237);
 }
 
@@ -137,7 +137,7 @@ footer {
   .navbar-item a {
     text-decoration: none;
     color: white;
-    font-weight: bold;
+    /* font-weight: bold; */
   }
   
   .navbar-item a:hover {
@@ -156,12 +156,69 @@ footer {
   }
 
   .toast-button {
-    margin-top: 50px;
-    background-color: #333;
+    display: inline-block;
+    background-color: #1f252e;
     color: rgb(114, 159, 237);
-    padding: 12px 20px;
-    border-radius: 4px;
+    border: none;
+    padding: 10px 18px;
     font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
   }
+  
+  .toast-button:hover {
+    background-color: #ffffff;
+    color: rgb(51, 69, 100);
+  }
+
+  .toast-text {
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .contact {
+    text-align: center;
+    padding: 20px;
+    max-width: 120vh;
+    margin: 5vh auto;
+    justify-content: center;
+
+  }
+
+  .contact-name {
+    font-size: 50px;
+    margin-bottom: 50px;
+  }
+
+  .contact-icon a {
+    padding: 10px;
+  }
+
+  .contact-icon img {
+    width: 60px;
+    height: 60px;
+
+  }
+
+  .background-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .background-header img {
+    margin-top: 3em;
+    width: 30%;
+  }
+
   
   
